--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 
-{% block title %}Home{% endblock title %}
+{% block title %}about{% endblock title %}
 
-{% block body%}This is my Body{% endblock body%}
+{% block body%}This is about Body{% endblock body%}
