--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Home{% endblock title %}
+{% block title %}contact{% endblock title %}
 
-{% block body%}This is my Body{% endblock body%}
+{% block body%}
+{% endblock body%}
