--- a/templates/service.html
+++ b/templates/service.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 
-{% block title %}Home{% endblock title %}
+{% block title %}service{% endblock title %}
 
-{% block body%}This is my Body{% endblock body%}
+{% block body%}This is service Body{% endblock body%}
