--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,6 +6,7 @@
     <div class="container-fluid px-0">
           <img src="https://source.unsplash.com/1200x400/?phone,contact" class="d-block w-100 mx-0" alt="...">
     <h1 class="text-center">Contact us</h1>
+        <div class="container">
     <form class="row g-3">
   <div class="col-md-6">
     <label for="inputEmail4" class="form-label">Email</label>
@@ -50,5 +51,6 @@
     <button type="submit" class="btn btn-primary">Sign in</button>
   </div>
 </form>
+    </div>
     </div>
 {% endblock body%}
