--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,13 +6,25 @@
     <div class="container-fluid px-0">
           <img src="https://source.unsplash.com/1200x400/?phone,contact" class="d-block w-100 mx-0" alt="...">
     <h1 class="text-center">Contact us</h1>
+        </div>
         <div class="container">
-    <form>
+    <form method="post">
         <div class="form-group">
-            <label for="name">name</label>
+            <label for="name">Name</label>
             <input type="text" class="form-control" id="name" placeholder="Enter your name">
         </div>
+        <div class="form-group">
+            <label for="email">Email address</label>
+            <input type="email" class="form-control" id="email" placeholder="Enter your email">
+        </div>
+        <div class="form-group">
+            <label for="phone">Phone number</label>
+            <input type="number" class="form-control" id="phone" placeholder="Enter your Mobile Number">
+        </div>
+         <div class="form-group">
+            <label for="desc">Tell me about what you want to contact for</label>
+            <input type="number" class="form-control" id="phone" placeholder="Enter your Mobile Number">
+        </div>
     </form>
-    </div>
     </div>
 {% endblock body%}
