--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,7 +8,8 @@
     <h1 class="text-center">Contact us</h1>
         </div>
         <div class="container">
-    <form method="post">
+    <form method="post" action="/contact">
+        {% csrf_token %}
         <div class="form-group">
             <label for="name">Name</label>
             <input type="text" class="form-control" id="name" placeholder="Enter your name">
@@ -23,8 +24,10 @@
         </div>
          <div class="form-group">
             <label for="desc">Tell me about what you want to contact for</label>
-            <input type="number" class="form-control" id="phone" placeholder="Enter your Mobile Number">
+            <textarea class="form-control" id="desc" rows="3" name="desc"></textarea>
         </div>
+        <br>
+        <button class="btn btn-primary" type="submit">Submit</button>
     </form>
     </div>
 {% endblock body%}
