--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,8 +8,12 @@
     <h1 class="text-center">Contact us</h1>
         </div>
         <div class="container">
-    <form method="post" action="/contact">
+    <form method="POST" action="/contact">
         {% csrf_token %}
+        <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" class="form-control" id="name" placeholder="Enter your name">
+        </div>
         <div class="form-group">
             <label for="email">Email address</label>
             <input type="email" class="form-control" id="email" placeholder="Enter your email">
