--- a/templates/contact.html
+++ b/templates/contact.html
@@ -15,8 +15,8 @@
             <input type="text" class="form-control" id="name" placeholder="Enter your name">
         </div>
         <div class="form-group">
-            <label for="email">Email address</label>
-            <input type="email" class="form-control" id="email" placeholder="Enter your email">
+            <label for="email">Email</label>
+            <input type="email" class="form-control" id="email" placeholder="Enter your email ID">
         </div>
         <div class="form-group">
             <label for="phone">Phone number</label>
