--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,7 +8,7 @@
     <h1 class="text-center">Contact us</h1>
         </div>
         <div class="container">
-    <form method="POST" action="/contact">
+    <form method="post" action="/contact">
         {% csrf_token %}
         <div class="form-group">
             <label for="name">Name</label>
