--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,15 +12,15 @@
         {% csrf_token %}
         <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" class="form-control" id="name" placeholder="Enter your name">
+            <input class="form-control" type="text"  id="name" name="name" placeholder="Enter your Mobile Number">
         </div>
         <div class="form-group">
             <label for="email">Email</label>
-            <input type="email" class="form-control" id="email" placeholder="Enter your email ID">
+            <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email ID">
         </div>
         <div class="form-group">
-            <label for="phone">Phone number</label>
-            <input type="number" class="form-control" id="phone" placeholder="Enter your Mobile Number">
+            <label for="phone">Mobile number</label>
+            <input class="form-control" type="number"  id="phone" name="phone" placeholder="Enter your Mobile Number">
         </div>
          <div class="form-group">
             <label for="desc">Tell me about what you want to contact for</label>
